# IonOS

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  main.cpp
main/apps/: app_manager.cpp  app_manager.h
main/apps/app_store/: app_store_app.cpp  app_store_app.h
main/apps/browser/: browser_app.cpp  browser_app.h
main/apps/bruce/: bruce_app.cpp  bruce_app.h  bruce_badusb.cpp  bruce_badusb.h  bruce_bluejammer.cpp  bruce_bluejammer.h  bruce_evil_portal.cpp  bruce_evil_portal.h  bruce_rfid.cpp  bruce_rfid.h  bruce_wifi_atks.cpp  bruce_wifi_atks.h
main/apps/chatbot/: chatbot_app.cpp  chatbot_app.h
main/apps/emulator/: emulator_app.cpp  emulator_app.h
main/apps/file_manager/: file_manager_app.cpp  file_manager_app.h
main/apps/installer/: app_installer.cpp  app_installer.h  ion_app_manifest.h
main/apps/music_player/: music_player_app.cpp  music_player_app.h
main/apps/settings/: settings_app.cpp  settings_app.h
main/config/: ion_config.h  lv_conf.h  pin_config.h
main/drivers/audio/: audio_driver.cpp  audio_driver.h
main/drivers/display/: st7789.h  st7789_driver.cpp
main/drivers/input/: button_driver.cpp  button_driver.h
main/drivers/rgb/: ws2812_driver.cpp  ws2812_driver.h
main/drivers/storage/: sd_driver.cpp  sd_driver.h
main/drivers/wireless/: nrf24_driver.cpp  nrf24_driver.h  wifi_driver.h  (+1 more)
main/fonts/: ion_fonts.cpp  ion_fonts.h
main/kernel/: kernel.cpp  kernel.h  memory_manager.cpp  memory_manager.h  task_manager.cpp  task_manager.h
main/resources/: resource_loader.cpp  resource_loader.h
main/services/: audio_manager.cpp  audio_manager.h  fs_manager.cpp  fs_manager.h  notification_service.cpp  notification_service.h  power_manager.cpp  power_manager.h  wifi_manager.cpp  wifi_manager.h
main/themes/: ion_themes.cpp  ion_themes.h
main/ui/: boot_animation.cpp  boot_animation.h  homescreen.cpp  homescreen.h  notification_popup.cpp  notification_popup.h  statusbar.cpp  statusbar.h  ui_engine.cpp  ui_engine.h
(+17 files in other folders)
