idf_component_register(
    SRCS
        "main.cpp"
        "kernel/kernel.cpp"
        "kernel/task_manager.cpp"
        "kernel/memory_manager.cpp"
        "drivers/display/st7789_driver.cpp"
        "drivers/audio/audio_driver.cpp"
        "drivers/input/button_driver.cpp"
        "drivers/rgb/ws2812_driver.cpp"
        "drivers/storage/sd_driver.cpp"
        "drivers/wireless/wifi_driver.cpp"
        "drivers/wireless/nrf24_driver.cpp"
        "ui/ui_engine.cpp"
        "ui/boot_animation.cpp"
        "ui/homescreen.cpp"
        "ui/statusbar.cpp"
        "ui/notification_popup.cpp"
        "services/wifi_manager.cpp"
        "services/audio_manager.cpp"
        "services/power_manager.cpp"
        "services/fs_manager.cpp"
        "services/notification_service.cpp"
        "apps/app_manager.cpp"
        "apps/settings/settings_app.cpp"
        "apps/music_player/music_player_app.cpp"
        "apps/browser/browser_app.cpp"
        "apps/chatbot/chatbot_app.cpp"
        "apps/file_manager/file_manager_app.cpp"
        "apps/emulator/emulator_app.cpp"
        "apps/emulator/core/peanut_gb_core.cpp"
        "apps/app_store/app_store_app.cpp"
        "apps/bruce/bruce_app.cpp"
        "apps/bruce/bruce_bluejammer.cpp"
        "apps/bruce/bruce_badusb.cpp"
        "apps/bruce/bruce_rfid.cpp"
        "apps/bruce/bruce_wifi_atks.cpp"
        "apps/bruce/bruce_evil_portal.cpp"
        "apps/installer/app_installer.cpp"
        "themes/ion_themes.cpp"
        "fonts/ion_fonts.cpp"
        "resources/resource_loader.cpp"
        "resources/generated/ion_icons.c"
        "resources/generated/ion_sounds.c"
        "resources/generated/ion_boot_frames.c"
        "resources/generated/ion_font_7x10.c"
    INCLUDE_DIRS "." ".."
    REQUIRES
        esp_timer freertos driver nvs_flash esp_wifi esp_netif
        esp_event lwip spi_flash fatfs sdmmc spiffs
        led_strip lvgl esp_adc esp_http_client esp_psram
        cJSON mbedtls
)
